--- a/pug/core/header.pug
+++ b/pug/core/header.pug
@@ -1,8 +1,10 @@
 // header
 header.header
   .wrapper
-    .header__burger 
-    a(href="#").header__logo 
+    .header__burger.hamburger.hamburger--squeeze
+      .hamburger-box
+        .hamburger-inner
+    a(href="index.html").header__logo 
       img(src="img/logo.svg", alt="")
     .header__bar 
       a(href="#").btn.btn--green 
