--- a/pug/index.pug
+++ b/pug/index.pug
@@ -35,6 +35,18 @@ block content
                   .banner-orange__img 
                     img(src="img/plate.png", alt="")
                 //	/banner-black
+              .swiper-slide 
+                // banner-white
+                .banner-white
+                  .banner-white__content 
+                    .banner-white__title Только башни
+                      span Москва-Сити
+                    .banner-white__text 
+                      p Наш ресторан обслуживает только близких соседей. 
+                      p Так никакого ожидания, все горячее и свежее.
+                  .banner-white__img 
+                    img(src="img/moskow-city.svg", alt="")
+                //	/banner-black
             .slider__pagination.swiper-pagination 
       //	/slider
 
