--- a/scss/style.scss
+++ b/scss/style.scss
@@ -75,6 +75,7 @@ $gray: #E9E9E9;
 @import 'blocks/slider';
 @import 'blocks/banner-black';
 @import 'blocks/banner-orange';
+@import 'blocks/banner-white';
 // @import 'blocks/menu';
 // @import 'blocks/accordion';
 // @import 'blocks/modal';
