--- a/css/style.css
+++ b/css/style.css
@@ -245,7 +245,7 @@ svg {
  * @link https://github.com/jonsuh/hamburgers
  */
 .hamburger {
-  padding: 15px 15px;
+  padding: 10px 10px;
   display: inline-block;
   cursor: pointer;
   -webkit-transition-property: opacity, -webkit-filter;
@@ -280,8 +280,8 @@ svg {
 }
 
 .hamburger-box {
-  width: 40px;
-  height: 24px;
+  width: 20px;
+  height: 14px;
   display: inline-block;
   position: relative;
 }
@@ -289,11 +289,11 @@ svg {
 .hamburger-inner {
   display: block;
   top: 50%;
-  margin-top: -2px;
+  margin-top: -1px;
 }
 .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
-  width: 40px;
-  height: 4px;
+  width: 20px;
+  height: 2px;
   background-color: #000;
   border-radius: 4px;
   position: absolute;
@@ -314,10 +314,10 @@ svg {
   display: block;
 }
 .hamburger-inner::before {
-  top: -10px;
+  top: -6px;
 }
 .hamburger-inner::after {
-  bottom: -10px;
+  bottom: -6px;
 }
 
 /*
@@ -432,7 +432,7 @@ svg {
 /* /btn */
 /* header */
 .header {
-  padding: 38px 0 68px;
+  padding: 38px 0 48px;
 }
 .header .wrapper {
   display: -webkit-box;
@@ -490,10 +490,27 @@ svg {
   -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
+@media (max-width: 768px) {
+  .header {
+    padding: 40px 0 16px;
+  }
+  .header__burger {
+    display: block;
+  }
+  .header__bar .btn {
+    display: none;
+  }
+  .header__user-icon {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+  }
+}
+
 /* /header */
 /* slider */
 .slider {
   overflow: hidden;
+  padding-top: 20px;
   padding-bottom: 120px;
 }
 .slider__slider {
@@ -507,7 +524,7 @@ svg {
   -ms-flex-align: center;
   align-items: center;
   width: auto !important;
-  left: 53px !important;
+  left: 43px !important;
   bottom: 52px !important;
 }
 .slider__pagination .swiper-pagination-bullet {
@@ -535,9 +552,9 @@ svg {
   -webkit-box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.05), 40px 40px 50px rgba(0, 0, 0, 0.5);
   box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.05), 40px 40px 50px rgba(0, 0, 0, 0.5);
 }
-@media (max-width: 1200px) {
-  .slider__slider {
-    padding-right: 100px;
+@media (max-width: 500px) {
+  .slider__pagination {
+    display: none;
   }
 }
 
@@ -706,3 +723,112 @@ svg {
 }
 
 /* /banner-orange */
+/* banner-white */
+.banner-white {
+  min-height: 500px;
+  padding: 40px 50px;
+  background: #E9E9E9;
+  border-radius: 80px 80px 80px 5px;
+  position: relative;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  overflow: hidden;
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
+}
+.banner-white__content {
+  position: relative;
+}
+.banner-white__title {
+  font-weight: 700;
+  font-size: 120px;
+  line-height: 130px;
+  margin-bottom: 60px;
+  position: relative;
+}
+.banner-white__title span {
+  font-size: 40px;
+  line-height: 50px;
+  position: absolute;
+  top: 0px;
+  right: 0;
+}
+.banner-white__text {
+  max-width: 300px;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 20px;
+}
+.banner-white__text p {
+  margin: 20px 0;
+}
+.banner-white__img {
+  width: 64%;
+  position: absolute;
+  bottom: -10px;
+  right: 0;
+  z-index: 2;
+}
+@media (max-width: 1200px) {
+  .banner-white__img {
+    z-index: 1;
+  }
+  .banner-white__content {
+    z-index: 2;
+  }
+}
+@media (max-width: 768px) {
+  .banner-white {
+    min-height: 400px;
+  }
+  .banner-white__content {
+    max-width: 350px;
+  }
+  .banner-white__title {
+    font-size: 95px;
+    line-height: 60px;
+    margin-bottom: 20px;
+  }
+  .banner-white__title span {
+    display: block;
+    position: static;
+    margin-top: 10px;
+  }
+  .banner-white__img {
+    bottom: -50px;
+  }
+}
+@media (max-width: 500px) {
+  .banner-white {
+    min-height: 230px;
+    padding: 30px;
+    border-radius: 40px 40px 40px 5px;
+  }
+  .banner-white__content {
+    max-width: 235px;
+  }
+  .banner-white__title {
+    font-size: 20px;
+    line-height: 25px;
+  }
+  .banner-white__title span {
+    font-size: 12px;
+    line-height: 14px;
+    margin-top: 5px;
+  }
+  .banner-white__text {
+    font-size: 12px;
+    line-height: 14px;
+  }
+  .banner-white__text p {
+    margin: 10px 0;
+  }
+  .banner-white__img {
+    width: 185px;
+    right: 20px;
+    bottom: -10px;
+  }
+}
+
+/* /banner-white */
