--- a/pug/index.pug
+++ b/pug/index.pug
@@ -50,4 +50,22 @@ block content
             .slider__pagination.swiper-pagination 
       //	/slider
 
+      // filter
+      .filter
+        .wrapper
+          .filter__links
+            a(href="#").filter__link.active Частным клиентам
+            a(href="#").filter__link Корпоративные заказы
+          .filter__categories 
+            a(href="#").filter__category.active Любимое
+            a(href="#").filter__category Закуски
+            a(href="#").filter__category Салаты
+            a(href="#").filter__category Горячее
+            a(href="#").filter__category Суши и роллы
+            a(href="#").filter__category Супы
+            a(href="#").filter__category Детское
+            a(href="#").filter__category Десерты
+            a(href="#").filter__category Напитки
+      //	/filter
+
     include core/footer.pug
