--- a/scss/style.scss
+++ b/scss/style.scss
@@ -76,6 +76,7 @@ $gray: #E9E9E9;
 @import 'blocks/banner-black';
 @import 'blocks/banner-orange';
 @import 'blocks/banner-white';
+@import 'blocks/filter';
 // @import 'blocks/menu';
 // @import 'blocks/accordion';
 // @import 'blocks/modal';
