--- a/scss/style.scss
+++ b/scss/style.scss
@@ -77,6 +77,8 @@ $gray: #E9E9E9;
 @import 'blocks/banner-orange';
 @import 'blocks/banner-white';
 @import 'blocks/filter';
+@import 'blocks/catalog';
+@import 'blocks/card';
 // @import 'blocks/menu';
 // @import 'blocks/accordion';
 // @import 'blocks/modal';
