--- a/scss/blocks/filter.scss
+++ b/scss/blocks/filter.scss
@@ -1,16 +1,19 @@
 /* filter */
 .filter { 
+  margin-bottom: 50px;
+  overflow: hidden;
   &__links {
     font-weight: 700;
     font-size: 28px;
     line-height: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
   }
   &__link {
     display: inline-block;
     margin-right: 40px;
     color: $text;
     opacity: 0.6;
+    user-select: none;
     &:hover:not(.active) {
       color: $orange;
       opacity: 1;
@@ -21,7 +24,18 @@
     }
   }
   &__categories {
-    
+    display: flex;
+    padding: 20px 0;
+    margin-right: -30px;
+    overflow-x: auto;
+    overflow-y: hidden;
+    overflow: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      width: 0;
+      height: 0;
+    }
   }
   &__category {
     display: inline-block;
@@ -31,6 +45,8 @@
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.08), -1px -1px 6px rgba(255, 255, 255, 0.5), -5px -5px 20px #FFFFFF, 5px 5px 20px #D3D3D3;
     border-radius: 20px;
     color: $text;
+    white-space: nowrap;
+    user-select: none;
     &:hover:not(.active) {
       background-color: #fff;
       box-shadow: 0 0 10px rgba(0, 0, 0, .2);
@@ -38,6 +54,11 @@
     &.active {
       box-shadow: inset -1px -1px 3px rgba(255, 255, 255, 0.8), inset -6px -6px 5px rgba(255, 255, 255, 0.3), inset 1px 1px 3px rgba(0, 0, 0, 0.15), inset 6px 6px 5px rgba(0, 0, 0, 0.06);
       cursor: default;
+    }
+  }
+  @media (max-width: $break_sm) {
+    &__links {
+      display: none;
     }
   }
 }
