--- a/scss/blocks/settings.scss
+++ b/scss/blocks/settings.scss
@@ -60,6 +60,12 @@ svg {
 }
 .row {
   @include row();
+  &.gy {
+    margin-top: -30px;
+    > * {
+      padding-top: 30px;
+    }
+  }
 }
 .wrapper {
   @include wrapper();
