--- a/scss/blocks/card.scss
+++ b/scss/blocks/card.scss
@@ -14,6 +14,11 @@
     height: 360px;
     border-radius: 40px 40px 0 0;
     background-color: #FE724B;
+    position: relative;
+    z-index: 2;
+    img {
+      max-height: 100%;
+    }
   }
   &__content {
     display: flex;
@@ -70,7 +75,15 @@
     margin-bottom: 38px;
   }
   &__bottom {
+  }
+  &__bottom-row {
     display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: -10px;
+    > * {
+      margin-top: 10px;
+    }
   }
   &__counter {
     display: flex;
@@ -149,7 +162,7 @@
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.15);
     border-radius: 100%;
     position: absolute;
-    top: -30px;
+    bottom: -10px;
     left: 20px;
   }
   &__favourite {
@@ -161,53 +174,151 @@
       transform: scale(1.1);
     }
   }
-  &:hover {
-    box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.05), 40px 40px 50px rgba(0, 0, 0, 0.5);
-    .card__content {
-      background-color: $text;
-      border-color: $text;
-    }
-    .card__title {
-      color: #fff;
-    }
-    .card__list {
-      color: rgba(255, 255, 255, 0.6);
-    }
-    .card__text {
-      color: rgba(255, 255, 255, 0.6);
-    }
-    .card__btn {
-      .btn {
+  &__price-btn {
+    display: none;
+  }
+  @media (min-width: $break_xs + 1) {
+    &:hover {
+      box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.05), 40px 40px 50px rgba(0, 0, 0, 0.5);
+  
+      .card__content {
         background-color: $text;
-        box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5), -1px -1px 6px rgba(255, 255, 255, 0.05), -5px -5px 20px rgba(255, 255, 255, 0.1), 5px 5px 20px rgba(0, 0, 0, 0.8);
+        border-color: $text;
       }
-    }
-    .card__counter {
-      border: 1px solid rgba(255, 255, 255, 0.08);
-    }
-    .card__counter-minus {
-      svg {
-        fill: #fff;
-      }
-      &:hover {
-        svg {
-          fill: $orange;
-        }
-      }
-    }
-    .card__counter-plus {
-      svg {
-        fill: #fff;
-      }
-      &:hover {
-        svg {
-          fill: $orange;
-        }
-      }
-    }
-    .card__counter-input {
-      input {
+  
+      .card__title {
         color: #fff;
+      }
+  
+      .card__list {
+        color: rgba(255, 255, 255, 0.6);
+      }
+  
+      .card__text {
+        color: rgba(255, 255, 255, 0.6);
+      }
+  
+      .card__btn {
+        .btn {
+          background-color: $text;
+          box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5), -1px -1px 6px rgba(255, 255, 255, 0.05), -5px -5px 20px rgba(255, 255, 255, 0.1), 5px 5px 20px rgba(0, 0, 0, 0.8);
+        }
+      }
+  
+      .card__counter {
+        border: 1px solid rgba(255, 255, 255, 0.08);
+      }
+  
+      .card__counter-minus {
+        svg {
+          fill: #fff;
+        }
+  
+        &:hover {
+          svg {
+            fill: $orange;
+          }
+        }
+      }
+  
+      .card__counter-plus {
+        svg {
+          fill: #fff;
+        }
+  
+        &:hover {
+          svg {
+            fill: $orange;
+          }
+        }
+      }
+  
+      .card__counter-input {
+        input {
+          color: #fff;
+        }
+      }
+    }
+  }
+  @media (max-width: $break_md) {
+    &__img {
+      height: 260px;
+    }
+  }
+  @media (max-width: $break_xs) {
+    display: flex;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #fff;
+    border-radius: 40px 0 0 0;
+    &__img {
+      flex-shrink: 0;
+      width: 170px;
+      height: 170px;
+      margin-right: 20px;
+      border-radius: 40px 40px 40px 5px;
+    }
+    &__content {
+      border: none;
+      padding: 0;
+      border-radius: none;
+    }
+    &__favourite {
+      display: none;
+    }
+    &__title {
+      font-size: 18px;
+      line-height: 20px;
+      margin-bottom: 4px;
+    }
+    &__list {
+      font-size: 14px;
+      line-height: 20px;
+      flex-grow: 1;
+      li {
+        &:last-child {
+          display: none;
+        }
+      }
+    }
+    &__text {
+      display: none;
+    }
+    &__btn {
+      display: none;
+    }
+    &__bottom-row {
+      display: block;
+    }
+    &__pepper {
+      bottom: auto;
+      top: -10px;
+      left: 0;
+    }
+    &__counter {
+      position: relative;
+    }
+    &__price-btn {
+      display: block;
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      .btn {
+        width: 100%;
+        padding: 10px 10px;
+      }
+      &.active {
+        top: -30px;
+        .btn {
+          width: auto;
+          height: auto;
+          font-size: 14px;
+          line-height: 20px;
+          background: transparent;
+          color: rgba(33, 38, 41, 0.5);
+          padding: 0;
+          box-shadow: none;
+        }
       }
     }
   }
