--- a/scss/blocks/card.scss
+++ b/scss/blocks/card.scss
@@ -202,6 +202,9 @@
         .btn {
           background-color: $text;
           box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5), -1px -1px 6px rgba(255, 255, 255, 0.05), -5px -5px 20px rgba(255, 255, 255, 0.1), 5px 5px 20px rgba(0, 0, 0, 0.8);
+          &:hover {
+            color: #fff;
+          }
         }
       }
   
